--- a/Desafio.ipynb
+++ b/Desafio.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "max    47.350000  22.000000     0.475000   0.801000   0.787000  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
        "max    22.000000     0.475000   0.801000   0.787000  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +836,7 @@
        "4         russia        20.0          28.0          23.0"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "4         russia        20.0          28.0          23.0          71.0"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
        "9          italy        10.0          10.0          20.0          40.0"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "8  SUB-SAHARAN AFRICA                      71.025000"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "<AxesSubplot:xlabel='Literacy (%)', ylabel='Region'>"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "10      11.13      10.36        0.018     0.246    0.735  "
       ]
      },
-     "execution_count": 122,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1441,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1575,7 +1575,7 @@
        "4      8.11     10.0             9.6            10.0  "
       ]
      },
-     "execution_count": 123,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "44            10.0  "
       ]
      },
-     "execution_count": 124,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1991,7 +1991,7 @@
        "54           10.00  "
       ]
      },
-     "execution_count": 125,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2002,16 +2002,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f7ebbda8040>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fcf80b4c6a0>"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2032,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2123,7 +2123,7 @@
        "8  OCEANIA                              1.217011e+07"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2141,16 +2141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7f7ec063efa0>"
+       "<seaborn.axisgrid.FacetGrid at 0x7fcf7adad1c0>"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2172,7 +2172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -2207,25 +2207,25 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>unitedstates</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>41.0</td>\n",
        "      <td>33.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>39.0</td>\n",
        "      <td>113.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>china</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>32.0</td>\n",
        "      <td>18.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>88.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>japan</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>14.0</td>\n",
        "      <td>17.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>27.0</td>\n",
        "      <td>58.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2239,10 +2239,50 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>russia</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>28.0</td>\n",
        "      <td>23.0</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>20.0</td>\n",
        "      <td>71.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>australia</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>46.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>netherlands</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>36.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>france</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>germany</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>italy</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2250,14 +2290,19 @@
       ],
       "text/plain": [
        "         Country  Gold Medal  Silver Medal  Bronze Medal  Total medals\n",
-       "0   unitedstates        39.0          41.0          33.0         113.0\n",
-       "1          china        38.0          32.0          18.0          88.0\n",
-       "2          japan        27.0          14.0          17.0          58.0\n",
+       "0   unitedstates        33.0          41.0          39.0         113.0\n",
+       "1          china        18.0          32.0          38.0          88.0\n",
+       "2          japan        17.0          14.0          27.0          58.0\n",
        "3  unitedkingdom        22.0          21.0          22.0          65.0\n",
-       "4         russia        20.0          28.0          23.0          71.0"
+       "4         russia        23.0          28.0          20.0          71.0\n",
+       "5      australia        22.0           7.0          17.0          46.0\n",
+       "6    netherlands        14.0          12.0          10.0          36.0\n",
+       "7         france        11.0          12.0          10.0          33.0\n",
+       "8        germany        16.0          11.0          10.0          37.0\n",
+       "9          italy        20.0          10.0          10.0          40.0"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2265,18 +2310,19 @@
    "source": [
     "#Ranking de medalhas utilizando a quantidade de medalhas de bronze como principal classificante:\n",
     "medOlTemp = medOl.copy()\n",
-    "medOlTemp.rename(columns={\"Bronze Medal\" : \"Gold Medal\", \"Gold Medal\" : \"Bronze Medal\"})\n",
+    "medOlTemp['Bronze Medal'] = medOl['Gold Medal']\n",
+    "medOlTemp['Gold Medal'] = medOl['Bronze Medal']\n",
     "medOlTemp.sort_values([\"Gold Medal\", \"Silver Medal\", \"Bronze Medal\"], ascending = False)\n",
-    "medOlTemp.head()"
+    "medOlTemp.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hpns = pd.read_excel(\"hapiness_report.xlsx\")"
+    "#hpns = pd.read_excel(\"hapiness_report.xlsx\")"
    ]
   }
  ],
